apps/base/beszel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beszel
  namespace: beszel
  labels:
    app.kubernetes.io/name: beszel
spec:
  ingressClassName: traefik-system-traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beszel
                port:
                  number: 8090
